Fixing the margin-right of the Tech-stack to centre it better and decreasing the gap between the header navigation buttons

--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ ul.disc {
     padding: 10px 0;
     text-align: center;
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
     white-space: nowrap;
     margin-top: 15px;
     font-size: 18px;
@@ -360,7 +360,7 @@ ul.disc {
 }
 
 .Tech-text p {
-    margin-right: 27px;
+    margin-right: 23px;
 }
 
 .and-more {
